--- a/html_parser/Cargo.toml
+++ b/html_parser/Cargo.toml
@@ -9,8 +9,16 @@ itertools = "0.12.1"
 log = "0.4"
 log4rs = "1.0"
 tiny_http = "0.12.0"
-serde = "1.0.201"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.117"
+diesel = { version = "2.1.6", features = ["postgres", "chrono", "uuid", "r2d2"] }
+uuid = { version = "1.0", features = ["serde", "v4"] }
+chrono = { version = "0.4", features = ["serde"] }
+dotenv = "0.15.0"
+crypto = "0.5.2"
+
+[dependencies.diesel_migrations]
+version = "2.1.0"
 
 [[bin]]
 name = "serve"
