--- a/html_parser/Cargo.toml
+++ b/html_parser/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 scraper = "0.19"
-itertools = "0.12.1"
+itertools = "0.13.0"
 log = "0.4"
 log4rs = "1.0"
 tiny_http = "0.12.0"
@@ -15,7 +15,7 @@ diesel = { version = "2.1.6", features = ["postgres", "chrono", "uuid", "r2d2"] 
 uuid = { version = "1.0", features = ["serde", "v4"] }
 chrono = { version = "0.4", features = ["serde"] }
 dotenv = "0.15.0"
-crypto = "0.5.2"
+rust-crypto = "0.2.36"
 
 [dependencies.diesel_migrations]
 version = "2.1.0"
